# minimal-streamlit

./: LICENSE  README.md  lista.py  pyproject.toml
pages/: books_reviews.py
